--- a/src/atomicubes/Assembly-CSharp-vs.csproj
+++ b/src/atomicubes/Assembly-CSharp-vs.csproj
@@ -46,7 +46,13 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Tyleo\Accumulator.cs" />
+     <Compile Include="Assets\Scripts\Tyleo\AccumulatorState.cs" />
      <Compile Include="Assets\Scripts\Tyleo\LatticeGenerator.cs" />
+     <Compile Include="Assets\Scripts\Tyleo\ParametricBackForthMovement.cs" />
+     <Compile Include="Assets\Scripts\Tyleo\ParametricEquation3d.cs" />
+     <Compile Include="Assets\Scripts\Tyleo\ParametricLerp3d.cs" />
+     <Compile Include="Assets\Scripts\Tyleo\ParametricMoveOtherOnCollision.cs" />
      <Compile Include="Assets\Scripts\Tyleo\PhysicsExtended.cs" />
      <Compile Include="Assets\Scripts\Tyleo\SpaceToJump.cs" />
      <Compile Include="Assets\Scripts\Tyleo\StandardWasdMovement.cs" />
